--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.17.2",
     "googleapis": "^92.0.0",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
     "request": "^2.88.2"
   },
   "scripts": {
