--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "personal-website",
-  "version": "1.0.0",
-  "description": "Personal portfolio website",
-  "main": "app.js",
-  "dependencies": {
-    "axios": "^0.24.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "googleapis": "^92.0.0",
-    "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15",
-    "request": "^2.88.2"
-  },
+  "name": "Personal Website",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "author": "Christopher McGregor",
-  "license": "ISC"
+  "dependencies": {
+    "autoprefixer": "^10.4.13",
+    "bootstrap": "^5.2.2",
+    "next": "13.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-terminal-ui": "^1.0.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.2"
+  }
 }
