--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "Personal Website",
-  "version": "0.1.0",
-  "private": true,
+  "name": "christophermcgregor.com",
+  "version": "0.2.0",
+  "description": "",
+  "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "vite",
+    "preview": "vite preview",
+    "build": "vite build",
+    "lint": "eslint \"**/*.{jsx,tsx}\"",
+    "lint-fix": "eslint --fix \"**/*.{jsx,tsx}\""
   },
   "dependencies": {
-    "autoprefixer": "^10.4.13",
-    "bootstrap": "^5.2.2",
-    "next": "13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-terminal-ui": "^1.0.0"
+    "@google/model-viewer": "^3.2.1",
+    "@monaco-editor/react": "^4.5.2",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.12.2",
+    "three": "^0.154.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.2"
+    "babel-preset-nano-react-app": "^0.1.0",
+    "eslint": "^8.49.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.33.2",
+    "vite": "^3.2.1"
+  },
+  "babel": {
+    "presets": [
+      "nano-react-app"
+    ]
   }
 }
